==> kkhodykin/uCNC/uCNC/src/hal/mcus/esp8266/mcu_esp8266.c <==
#include "../../../cnc.h"
#include <string.h>
#include <stdbool.h>
#include <stdint.h>
#include <c_types.h>
#include "ets_sys.h"
#include "os_type.h"
#include "c_types.h"
#include "gpio.h"
#include "eagle_soc.h"
#include "osapi.h"
#include "user_interface.h"
#include "twi.h"
#define ITP_SAMPLE_RATE (F_STEP_MAX * 2)

void mcu_init(void)
{
	// this resets the global ISR value
	mcu_disable_global_isr();
	mcu_enable_global_isr();
	mcu_io_init();
	mcu_uart_init();
	mcu_spi_init();

#ifndef RAM_ONLY_SETTINGS
	mcu_eeprom_init(); // Emulated EEPROM
#endif

#ifdef MCU_HAS_WIFI
	esp8266_wifi_init();
#endif

#ifdef IC74HC595_CUSTOM_SHIFT_IO
	ic74hc595_shift_init();
#endif

	// init rtc
	os_timer_setfn(&esp8266_rtc_timer, (os_timer_func_t *)&mcu_rtc_isr, NULL);
	os_timer_arm(&esp8266_rtc_timer, 1, true);

	// init timer1
	timer1_isr_init();
	timer1_attachInterrupt(mcu_itp_isr);
	timer1_enable(TIM_DIV1, TIM_EDGE, TIM_LOOP);
	timer1_write((APB_CLK_FREQ / ITP_SAMPLE_RATE));

#ifdef MCU_HAS_I2C
	i2c_master_gpio_init();
	i2c_master_init();
#endif
}

void mcu_dotasks(void)
{
	// reset WDT
	system_soft_wdt_feed();
	mcu_uart_dotasks();
#ifdef MCU_HAS_WIFI
	esp8266_wifi_dotasks();
#endif
#ifdef IC74HC595_CUSTOM_SHIFT_IO
	// esp8266_shifter_dotasks();
#endif
}

void esp8266_delay_us(uint16_t delay)
{
	uint32_t time = system_get_time() + delay - 1;
	while (time > system_get_time())
		;
}

void mcu_start_timeout()
{
	esp8266_oneshot_counter = esp8266_oneshot_reload;
}
