==> kkhodykin/uCNC/uCNC/src/hal/mcus/esp32/mcu_esp32.c <==
#include "../../../cnc.h"
#include "esp_timer.h"
#include "esp_task_wdt.h"
#include "esp_ipc.h"
#include "driver/uart.h"
#include "driver/timer.h"
#include "soc/i2s_struct.h"
#include "driver/i2c.h"
#include "hal/spi_types.h"
#include "driver/spi_master.h"
#define SPI_DMA_BUFFER_SIZE 1024
#include "hal/spi_types.h"
#include "driver/spi_master.h"
#define SPI2_DMA_BUFFER_SIZE 1024
#include <string.h>
#include <stdbool.h>
#include <stdint.h>
#include <math.h>
#include <nvs.h>
#include <esp_partition.h>
#include "driver/i2s.h"
#include "soc/i2s_struct.h"
#define I2S_SAMPLE_RATE (F_STEP_MAX * 2)
#define I2S_SAMPLES_PER_BUFFER (I2S_SAMPLE_RATE / 500) // number of samples per 2ms (0.002/1 = 1/500)
#define I2S_BUFFER_COUNT 5														 // DMA buffer size 5 * 2ms = 10ms stored motions (can be adjusted but may cause to much or too little latency)
#define I2S_SAMPLE_US (1000000UL / I2S_SAMPLE_RATE)		 // (1s/250KHz = 0.000004s = 4us)
#define ITP_SAMPLE_RATE (I2S_SAMPLE_RATE)
#define I2S_MODE __atomic_load_n((uint32_t *)&i2s_mode, __ATOMIC_RELAXED)

void mcu_init(void)
{
#if (defined(LIMIT_X_ISR) || defined(LIMIT_Y_ISR) || defined(LIMIT_Z_ISR) || defined(LIMIT_X2_ISR) || defined(LIMIT_Y2_ISR) || defined(LIMIT_Z2_ISR) || defined(LIMIT_A_ISR) || defined(LIMIT_B_ISR) || defined(LIMIT_C_ISR) || defined(PROBE_ISR) || defined(ESTOP_ISR) || defined(SAFETY_DOOR_ISR) || defined(FHOLD_ISR) || defined(CS_RES_ISR) || defined(DIN0_ISR) || defined(DIN1_ISR) || defined(DIN2_ISR) || defined(DIN3_ISR) || defined(DIN4_ISR) || defined(DIN5_ISR) || defined(DIN6_ISR) || defined(DIN7_ISR))
	gpio_install_isr_service(0);
#endif

	mcu_io_init();

#ifdef MCU_HAS_UART2
	// initialize UART
	const uart_config_t uart2config = {
			.baud_rate = BAUDRATE2,
			.data_bits = UART_DATA_8_BITS,
			.parity = UART_PARITY_DISABLE,
			.stop_bits = UART_STOP_BITS_1,
			.flow_ctrl = UART_HW_FLOWCTRL_DISABLE,
			.source_clk = UART_SCLK_APB};
	// We won't use a buffer for sending data.
	uart_param_config(UART2_PORT, &uart2config);
	uart_set_pin(UART2_PORT, TX2_BIT, RX2_BIT, UART_PIN_NO_CHANGE, UART_PIN_NO_CHANGE);
#endif

	// launches isr tasks that will run on core 0
	// currently it's running PWM and UART on core 0
	// Arduino Bluetooth also runs on core 0
	// Arduino WiFi ???
	esp_ipc_call_blocking(0, mcu_core0_tasks_init, NULL);

	// starts EEPROM before UART to enable WiFi and BT settings
#if !defined(RAM_ONLY_SETTINGS) && !defined(USE_ARDUINO_EEPROM_LIBRARY)
	// esp32_eeprom_init(NVM_STORAGE_SIZE); // 1K Emulated EEPROM

	// starts nvs
	mcu_eeprom.size = 0;
	memset(mcu_eeprom.data, 0, NVM_STORAGE_SIZE);
	if (nvs_open("eeprom", NVS_READWRITE, &mcu_eeprom.nvs_handle) == ESP_OK)
	{
		// determines the maximum sector size of NVS that can be read/write
		nvs_get_blob(mcu_eeprom.nvs_handle, "eeprom", NULL, &mcu_eeprom.size);
		if (NVM_STORAGE_SIZE > mcu_eeprom.size)
		{
			log_e("eeprom does not have enough space");
			mcu_eeprom.size = 0;
		}

		nvs_get_blob(mcu_eeprom.nvs_handle, "eeprom", mcu_eeprom.data, &mcu_eeprom.size);
	}
	else
	{
		log_e("eeprom failed to open");
	}
#else
	extern void esp32_eeprom_init(int size);
	esp32_eeprom_init(NVM_STORAGE_SIZE);
#endif

#ifdef MCU_HAS_UART
	// initialize UART
	const uart_config_t uartconfig = {
			.baud_rate = BAUDRATE,
			.data_bits = UART_DATA_8_BITS,
			.parity = UART_PARITY_DISABLE,
			.stop_bits = UART_STOP_BITS_1,
			.flow_ctrl = UART_HW_FLOWCTRL_DISABLE,
			.source_clk = UART_SCLK_APB};
	// We won't use a buffer for sending data.
	uart_param_config(UART_PORT, &uartconfig);
	uart_set_pin(UART_PORT, TX_BIT, RX_BIT, UART_PIN_NO_CHANGE, UART_PIN_NO_CHANGE);
#endif

	// inititialize ITP timer
	timer_config_t itpconfig = {0};
	itpconfig.divider = 2;
	itpconfig.counter_dir = TIMER_COUNT_UP;
	itpconfig.counter_en = TIMER_PAUSE;
	itpconfig.intr_type = TIMER_INTR_MAX;
	itpconfig.alarm_en = TIMER_ALARM_EN;
	itpconfig.auto_reload = true;
	timer_init(ITP_TIMER_TG, ITP_TIMER_IDX, &itpconfig);
	/* Timer's counter will initially start from value below.
		 Also, if auto_reload is set, this value will be automatically reload on alarm */
	timer_set_counter_value(ITP_TIMER_TG, ITP_TIMER_IDX, 0x00000000ULL);
	/* Configure the alarm value and the interrupt on alarm. */
	timer_set_alarm_value(ITP_TIMER_TG, ITP_TIMER_IDX, (uint64_t)(getApbFrequency() / (ITP_SAMPLE_RATE * 2)));
	// register PWM isr
	timer_isr_register(ITP_TIMER_TG, ITP_TIMER_IDX, mcu_itp_isr, NULL, 0, NULL);
	timer_enable_intr(ITP_TIMER_TG, ITP_TIMER_IDX);
// timer_start(ITP_TIMER_TG, ITP_TIMER_IDX);

// inititialize SERVO and soft PWM timer
#if (SERVO_MASK > 0) || defined(IC74HC595_HAS_PWMS) || defined(IC74HC595_HAS_SERVOS) || defined(MCU_HAS_SOFT_PWM_TIMER)
	timer_config_t servoconfig = {0};
	servoconfig.divider = 2;
	servoconfig.counter_dir = TIMER_COUNT_UP;
	servoconfig.counter_en = TIMER_PAUSE;
	servoconfig.intr_type = TIMER_INTR_MAX;
	servoconfig.alarm_en = TIMER_ALARM_EN;
	servoconfig.auto_reload = true;
	timer_init(SERVO_TIMER_TG, SERVO_TIMER_IDX, &servoconfig);
	/* Timer's counter will initially start from value below.
		 Also, if auto_reload is set, this value will be automatically reload on alarm */
	timer_set_counter_value(SERVO_TIMER_TG, SERVO_TIMER_IDX, 0x00000000ULL);
	/* Configure the alarm value and the interrupt on alarm. */
	timer_set_alarm_value(SERVO_TIMER_TG, SERVO_TIMER_IDX, (uint64_t)(getApbFrequency() / (ITP_SAMPLE_RATE * 2)));
	// register PWM isr
	timer_isr_register(SERVO_TIMER_TG, SERVO_TIMER_IDX, mcu_gen_pwm_and_servo, NULL, 0, NULL);
	timer_enable_intr(SERVO_TIMER_TG, SERVO_TIMER_IDX);
	timer_start(SERVO_TIMER_TG, SERVO_TIMER_IDX);
#endif

#ifdef IC74HC595_CUSTOM_SHIFT_IO
	esp32_i2s_extender_init();
#endif

	// initialize rtc timer (currently on core 1)
	xTaskCreatePinnedToCore(mcu_rtc_task, "rtcTask", 2048, NULL, 7, NULL, CONFIG_ARDUINO_RUNNING_CORE);

#ifdef MCU_HAS_SPI

	spi_config_t spi_conf = {0};
#ifndef USE_ARDUINO_SPI_LIBRARY
	spi_conf.mode = SPI_MODE;
#else
	mcu_spi_init();
#endif
	mcu_spi_config(spi_conf, SPI_FREQ);
#endif

#ifdef MCU_HAS_SPI2

	spi_config_t spi2_conf = {0};
#ifndef USE_ARDUINO_SPI_LIBRARY
	spi2_conf.mode = SPI2_MODE;
#else
	mcu_spi2_init();
#endif
	mcu_spi2_config(spi2_conf, SPI2_FREQ);
#endif

#ifdef MCU_HAS_I2C
	mcu_i2c_config(I2C_FREQ);
#endif

	esp32_wifi_bt_init();
	mcu_enable_global_isr();
}

void esp32_delay_us(uint16_t delay)
{
	int64_t time = esp_system_get_time() + delay - 1;
	while (time > esp_system_get_time())
		;
}

void mcu_dotasks(void)
{
	// reset WDT
	esp_task_wdt_reset();

	// loop through received data
	uint8_t rxdata[RX_BUFFER_SIZE];
	int rxlen, i;
#ifdef MCU_HAS_UART
	rxlen = uart_read_bytes(UART_PORT, rxdata, RX_BUFFER_CAPACITY, 0);
	for (i = 0; i < rxlen; i++)
	{
		uint8_t c = (uint8_t)rxdata[i];
		if (mcu_com_rx_cb(c))
		{
			if (BUFFER_FULL(uart_rx))
			{
				c = OVF;
			}

			BUFFER_ENQUEUE(uart_rx, &c);
		}
	}
#endif
#if defined(MCU_HAS_UART2)
	rxlen = uart_read_bytes(UART2_PORT, rxdata, RX_BUFFER_CAPACITY, 0);
	for (i = 0; i < rxlen; i++)
	{
		uint8_t c = (uint8_t)rxdata[i];
#if !defined(DETACH_UART2_FROM_MAIN_PROTOCOL)
		if (mcu_com_rx_cb(c))
		{
			if (BUFFER_FULL(uart2_rx))
			{
				c = OVF;
			}

			BUFFER_ENQUEUE(uart2_rx, &c);
		}
#else
		mcu_uart2_rx_cb(c);
#ifndef UART2_DISABLE_BUFFER
		if (BUFFER_FULL(uart2_rx))
		{
			c = OVF;
		}

		BUFFER_ENQUEUE(uart2_rx, &c);
#endif
#endif
	}
#endif

	esp32_wifi_bt_process();
}

MCU_CALLBACK void mcu_start_timeout()
{
#if defined(MCU_HAS_ONESHOT_TIMER) && defined(ENABLE_RT_SYNC_MOTIONS)
	esp32_oneshot_counter = esp32_oneshot_reload;
#elif defined(MCU_HAS_ONESHOT_TIMER)
	timer_start(ONESHOT_TIMER_TG, ONESHOT_TIMER_IDX);
#endif
}
